[gd_scene load_steps=39 format=3 uid="uid://dmhsokr2rj750"]

[ext_resource type="Script" uid="uid://i3mn841vgq1n" path="res://Scenes/Shop/shop.gd" id="1_mawfq"]
[ext_resource type="AudioStream" uid="uid://brurpddkw5j74" path="res://art/(Loop) Peaceful Village.wav" id="2_hrsch"]
[ext_resource type="Texture2D" uid="uid://uy26l5wvm8l6" path="res://art/1bit/shop_label.png" id="7_kca75"]
[ext_resource type="PackedScene" uid="uid://cfj77qt303ooj" path="res://Scenes/Shop/shop_card.tscn" id="8_tm2gn"]
[ext_resource type="Texture2D" uid="uid://criap3gcf28r4" path="res://art/1bit/orcoArt/Comerciante1.png" id="9_m4x3p"]
[ext_resource type="Texture2D" uid="uid://c1601ybxwaibt" path="res://art/1bit/orcoArt/Comerciante FondoC1.png" id="9_n21ru"]
[ext_resource type="PackedScene" uid="uid://cnxnm2nk6s6v0" path="res://Scenes/UI/card_tool_tip_pop_up.tscn" id="9_ns37w"]
[ext_resource type="Texture2D" uid="uid://dbxob13qdw1r4" path="res://art/1bit/orcoArt/Comerciante FondoB4.png" id="10_ax832"]
[ext_resource type="Texture2D" uid="uid://dn1tf4nualhfo" path="res://art/1bit/background/Background_undead_06.png" id="10_v7wqc"]
[ext_resource type="Texture2D" uid="uid://bbdif1yxeqagj" path="res://art/1bit/orcoArt/Comerciante FondoA1.png" id="11_3d1o5"]
[ext_resource type="Texture2D" uid="uid://d2muvef41ph4i" path="res://art/1bit/orcoArt/Comerciante2.png" id="11_cb5j8"]
[ext_resource type="Texture2D" uid="uid://c6nyl3v2j187" path="res://art/1bit/orcoArt/Comerciante FondoA2.png" id="12_kj5cl"]
[ext_resource type="Texture2D" uid="uid://b2bdp55ntxfd1" path="res://art/1bit/orcoArt/Comerciante FondoA3.png" id="13_5y16c"]
[ext_resource type="Texture2D" uid="uid://bx6phe8cttb3k" path="res://art/1bit/orcoArt/Comerciante FondoA4.png" id="14_xcb6t"]
[ext_resource type="Texture2D" uid="uid://dbnbqjn445mui" path="res://art/1bit/orcoArt/Comerciante FondoB1.png" id="15_4tclv"]
[ext_resource type="PackedScene" uid="uid://caj6eeau7nkcr" path="res://Scenes/modifier_handler/modifier_handler.tscn" id="15_qjj56"]
[ext_resource type="Texture2D" uid="uid://dsedgukfqcj0f" path="res://art/1bit/orcoArt/Comerciante FondoB2.png" id="16_ac6qo"]
[ext_resource type="PackedScene" uid="uid://c5iuw4qotc0vy" path="res://Scenes/modifier_handler/modifier.tscn" id="16_ddf80"]
[ext_resource type="Texture2D" uid="uid://du5v355tr2yau" path="res://art/1bit/orcoArt/Comerciante FondoB3.png" id="17_a0452"]
[ext_resource type="Texture2D" uid="uid://7ckph12aili" path="res://art/1bit/orcoArt/Comerciante FondoC2.png" id="18_oytls"]
[ext_resource type="Texture2D" uid="uid://bpyyf88rxqfen" path="res://art/1bit/orcoArt/Comerciante FondoC3.png" id="19_n543s"]
[ext_resource type="Texture2D" uid="uid://44empju5u6xu" path="res://art/1bit/orcoArt/Comerciante FondoC4.png" id="20_r7byq"]
[ext_resource type="Texture2D" uid="uid://dvvb4x1njryd3" path="res://art/1bit/orcoArt/Comerciante1-2.png" id="23_2k04f"]
[ext_resource type="Texture2D" uid="uid://bur56kawfytjy" path="res://art/1bit/XaviArt/buttons-ui/button-big-02-hover.png" id="27_qydip"]
[ext_resource type="Texture2D" uid="uid://c3rcoj2njnhkd" path="res://art/1bit/XaviArt/buttons-ui/button-big-02-press.png" id="28_wdfyn"]
[ext_resource type="Texture2D" uid="uid://bsimhus5mhmwx" path="res://art/1bit/XaviArt/buttons-ui/button-big-02-base.png" id="29_gp0wy"]

[sub_resource type="Animation" id="Animation_cxch1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FondoA:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11_3d1o5")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FondoB:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_ax832")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FondoC:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_n21ru")]
}

[sub_resource type="Animation" id="Animation_i0rm8"]
resource_name = "fondo_a"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FondoA:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("11_3d1o5"), ExtResource("12_kj5cl"), ExtResource("13_5y16c"), ExtResource("14_xcb6t")]
}

[sub_resource type="Animation" id="Animation_43crv"]
resource_name = "fondo_b"
length = 2.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FondoB:texture")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 2, 2.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("10_ax832"), ExtResource("15_4tclv"), ExtResource("16_ac6qo"), ExtResource("17_a0452"), ExtResource("16_ac6qo"), ExtResource("10_ax832")]
}

[sub_resource type="Animation" id="Animation_e0f3m"]
resource_name = "fondo_c"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FondoC:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("9_n21ru"), ExtResource("18_oytls"), ExtResource("19_n543s"), ExtResource("20_r7byq"), ExtResource("9_n21ru")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_llkgq"]
_data = {
&"RESET": SubResource("Animation_cxch1"),
&"fondo_a": SubResource("Animation_i0rm8"),
&"fondo_b": SubResource("Animation_43crv"),
&"fondo_c": SubResource("Animation_e0f3m")
}

[sub_resource type="Animation" id="Animation_74qjp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShopKeeper/ShopKeeper:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_m4x3p")]
}

[sub_resource type="Animation" id="Animation_nyktx"]
resource_name = "blink"
length = 0.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ShopKeeper/ShopKeeper:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("23_2k04f"), ExtResource("11_cb5j8"), ExtResource("9_m4x3p")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eddim"]
_data = {
&"RESET": SubResource("Animation_74qjp"),
&"blink": SubResource("Animation_nyktx")
}

[sub_resource type="LabelSettings" id="LabelSettings_peme3"]
outline_size = 3
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5veni"]
texture = ExtResource("27_qydip")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jkp36"]
texture = ExtResource("28_wdfyn")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lrquv"]
texture = ExtResource("29_gp0wy")

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_mawfq")
music = ExtResource("2_hrsch")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="ColorRect" type="ColorRect" parent="BackgroundLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Background" type="Sprite2D" parent="BackgroundLayer"]
unique_name_in_owner = true
texture = ExtResource("10_v7wqc")
centered = false

[node name="DecorationLayer" type="CanvasLayer" parent="."]

[node name="ShopLabel" type="TextureRect" parent="DecorationLayer"]
offset_left = 95.0
offset_top = 79.0
offset_right = 143.0
offset_bottom = 120.0
texture = ExtResource("7_kca75")
expand_mode = 1
stretch_mode = 5

[node name="FondoC" type="TextureRect" parent="DecorationLayer"]
offset_left = 127.0
offset_top = 144.0
offset_right = 191.0
offset_bottom = 184.0
scale = Vector2(2, 2)
texture = ExtResource("9_n21ru")
expand_mode = 1
stretch_mode = 5

[node name="FondoB" type="TextureRect" parent="DecorationLayer"]
offset_left = -1.0
offset_top = 144.0
offset_right = 63.0
offset_bottom = 184.0
scale = Vector2(2, 2)
texture = ExtResource("10_ax832")
expand_mode = 1
stretch_mode = 5

[node name="FondoA" type="TextureRect" parent="DecorationLayer"]
offset_left = -1.0
offset_top = 208.0
offset_right = 143.0
offset_bottom = 248.0
scale = Vector2(2, 2)
texture = ExtResource("11_3d1o5")
expand_mode = 1
stretch_mode = 5

[node name="FondoAnimation" type="AnimationPlayer" parent="DecorationLayer"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_llkgq")
}

[node name="FondoAnimationTimer" type="Timer" parent="DecorationLayer"]
unique_name_in_owner = true

[node name="ShopKeeper" type="Node" parent="DecorationLayer"]

[node name="ShopKeeper" type="TextureRect" parent="DecorationLayer/ShopKeeper"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 118.0
offset_top = -159.0
offset_right = 150.0
offset_bottom = -127.0
grow_vertical = 0
scale = Vector2(2, 2)
texture = ExtResource("9_m4x3p")
expand_mode = 1
stretch_mode = 4

[node name="ShopKeeperAnimation" type="AnimationPlayer" parent="DecorationLayer/ShopKeeper"]
unique_name_in_owner = true
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_eddim")
}

[node name="BlinkTimer" type="Timer" parent="DecorationLayer/ShopKeeper"]
unique_name_in_owner = true
one_shot = true

[node name="ShopKeeperDialogs" type="Label" parent="DecorationLayer/ShopKeeper"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -229.0
offset_top = -44.0
offset_right = -79.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Hi, Please take your 
time! 
"
label_settings = SubResource("LabelSettings_peme3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="DialogTimer" type="Timer" parent="DecorationLayer/ShopKeeper"]
unique_name_in_owner = true

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="BackButton" type="Button" parent="UILayer"]
custom_minimum_size = Vector2(120, 32)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 210.0
offset_top = 135.0
offset_right = 294.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_5veni")
theme_override_styles/pressed = SubResource("StyleBoxTexture_jkp36")
theme_override_styles/normal = SubResource("StyleBoxTexture_lrquv")
text = "Leave"

[node name="ShopContent" type="VBoxContainer" parent="UILayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = -142.0
offset_right = 301.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2

[node name="Cards" type="HBoxContainer" parent="UILayer/ShopContent"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="ShopCard" parent="UILayer/ShopContent/Cards" instance=ExtResource("8_tm2gn")]
layout_mode = 2

[node name="ShopCard2" parent="UILayer/ShopContent/Cards" instance=ExtResource("8_tm2gn")]
layout_mode = 2

[node name="ShopCard3" parent="UILayer/ShopContent/Cards" instance=ExtResource("8_tm2gn")]
layout_mode = 2

[node name="CardToolTipPopUp" parent="UILayer" instance=ExtResource("9_ns37w")]
unique_name_in_owner = true
visible = false

[node name="ModifierHandler" parent="." instance=ExtResource("15_qjj56")]

[node name="ShopCostModifier" parent="ModifierHandler" instance=ExtResource("16_ddf80")]
type = 3

[connection signal="pressed" from="UILayer/BackButton" to="." method="_on_back_button_pressed"]
